# sysrepo-crystal

./: .gitignore  .travis.yml  Makefile  README.md  shard.yml
netconf/: odin.yang
spec/: spec_helper.cr  sysrepo-crystal_spec.cr
src/: CMakeLists.txt  callback.cr  connection.cr  enums.cr  oper_data_example.cr  session.cr  subscribe.cr  sysrepo-crystal.c  sysrepo-crystal.cr  sysrepo-crystal.h  types.cr  utils.cr
src/sysrepo-crystal/: enums.cr  lib_std.cr  lib_sysrepo.cr  types.cr  version.cr
